# secretfs

./: LICENSE  README.md  secretfs.cabal  stack.yaml
app/: Main.hs
src/System/: SecretFS.hs
src/System/SecretFS/: Core.hs  DirConfig.hs  EncryptedFile.hs  InterpolatedFile.hs  RegularFile.hs
