name:                secretfs
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/timbod7/secretfs#readme
license:             BSD3
license-file:        LICENSE
author:              Tim Docker
maintainer:          tim@dockerz.net
copyright:           2016 Tim Docker
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     System.SecretFS
  build-depends:       base >= 4.7 && < 5
                     , HFuse >= 0.2.4 && < 0.3
                     , bytestring >= 0.10.6 && < 0.11
                     , directory >= 1.2.2 && < 1.3
                     , filepath >= 1.4 && < 1.5
                     , unix >= 2.7.1 && < 2.8
  default-language:    Haskell2010

executable secretfs
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , secretfs
                     , bytestring >= 0.10.6 && < 0.11
                     , HFuse >= 0.2.4 && < 0.3
  default-language:    Haskell2010

test-suite secretfs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , secretfs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/timbod7/secretfs
