name:                secretfs
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/timbod7/secretfs#readme
license:             BSD3
license-file:        LICENSE
author:              Tim Docker
maintainer:          tim@dockerz.net
copyright:           2016 Tim Docker
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     System.SecretFS, System.SecretFS.Core, System.SecretFS.DirConfig
                     , System.SecretFS.RegularFile, System.SecretFS.EncryptedFile
                     , System.SecretFS.InterpolatedFile
  build-depends:       base >= 4.7 && < 5
                     , HFuse >= 0.2.4 && < 0.3
                     , aeson >= 0.11 && < 0.12
                     , bytestring >= 0.10.6 && < 0.11
                     , containers >= 0.5.6 && < 0.6
                     , directory >= 1.2.2 && < 1.3
                     , filepath >= 1.4 && < 1.5
                     , hastache >= 0.6.1 && < 0.7
                     , hastache-aeson >= 0.1.1.0 && < 0.2
                     , stm >= 2.4.4.1 && < 2.5
                     , text >= 1.2.2.1 && < 1.3
                     , time >= 1.5.0.1 && < 1.6
                     , unix >= 2.7.1 && < 2.8
                     , unordered-containers >= 0.2.7 && < 0.3
                     , rncryptor >= 0.0.2.3 && < 0.1
  default-language:    Haskell2010

executable secretfs
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , secretfs
                     , bytestring >= 0.10.6 && < 0.11
                     , HFuse >= 0.2.4 && < 0.3
                     , optparse-applicative >= 0.12.1.0 && < 0.13
                     , text >= 1.2.2.1 && < 1.3
  default-language:    Haskell2010

test-suite secretfs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , secretfs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/timbod7/secretfs
